--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="scroll-indicator">
-            <span>↓ SCENDI NELLA FOLLIA ↓</span>
+            <span>↓ SCENDI NELL'ARENA ↓</span>
         </div>
     </div>
 
@@ -32,7 +32,7 @@
         <!-- Quote Iconica -->
         <div class="epic-quote">
             <div class="quote-text">
-                "LA DOMENICA GLI GNORANTI VANNO IN CHIESA. NOI ANDIAMO A FARE PIEGHE."
+                "LA DOMENICA MOLTI VANNO IN CHIESA. NOI GLI GNORANT ANDIAMO A FARE PIEGHE."
             </div>
             <div class="quote-author">#GLIGNORANTILADOMENICA </div>
         </div>
