--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Quote Iconica -->
         <div class="epic-quote">
             <div class="quote-text">
-                "LA DOMENICA MOLTI VANNO IN CHIESA. NOI GLI GNORANT ANDIAMO A FARE PIEGHE."
+                "LA DOMENICA MOLTI VANNO IN CHIESA. NOI GLI GNORANTI ANDIAMO A FARE PIEGHE."
             </div>
             <div class="quote-author">#GLIGNORANTILADOMENICA </div>
         </div>
@@ -267,7 +267,7 @@
             <div class="passo-card epic">
                 <div class="passo-icon">🌲</div>
                 <div class="passo-content">
-                    <h3>PASSO MENOLA (1.363m)</h3>
+                    <h3>PASSO MENODLA (1.363m)</h3>
                     <span class="difficulty easy">BALNEARE MENTALE</span>
                     <p>Tra i boschi dell'Alto Adige. Una pausa rigenerante prima dell'ultimo assalto.</p>
                 </div>
