--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <div class="quote-text">
                 "LA DOMENICA MOLTI VANNO IN CHIESA, NOI ANDIAMO A FARE PIEGHE."<br>
                 "IL NOSTRO ROSARIO ..IL NASTRO D'ASFALTO."<br>
-                "Ma ricordati sempre : se sei incerto Tieni aperto...non frenare, spalanca e vai..."
+                Ma ricordati sempre : <br>
+                Se sei incerto Tieni aperto...non frenare, spalanca e vai...
             </div>
             <div class="quote-author">#GLIGNORANTILADOMENICA </div>
         </div>
