--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 <div class="day-card epic-day">
     <div class="day-header king-header">
         <div class="day-badge">G3</div>
-        <div class="day-title">ANELLO STELVIO - IL TRONO DELL'ADRENALINA</div>
+        <div class="day-title">ANELLO STELVIO - IL TRONO DEL VERO MOTOCICLISTA</div>
         <div class="day-distance">220KM</div>
     </div>
     <div class="day-content">
