--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
     <div class="day-content">
         <div class="ride-description">
-            <p class="epic-intro"><strong>Oggi si scrive la storia.</strong> Il passo che tutti sognano, il Re che tutti temono. 48 tornanti di pura leggenda.</p>
+            <p class="epic-intro"><strong>Oggi si scrive la storia.</strong> Il passo che tutti sognano, il Re che tutti temono. 48 tornanti di pura leggenda, per molti ma NON per tutti.</p>
             
             <div class="passo-card epic">
                 <div class="passo-icon">👑</div>
