--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="info-item">
                         <span class="info-label">🏨 Covo:</span>
-                        <span class="info-value">Bolzano base operativa</span>
+                        <span class="info-value">Bolzano base operativa - notte 2/3</span>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
         <div class="day-card epic-day">
             <div class="day-header adrenaline-header">
                 <div class="day-badge">G2</div>
-                <div class="day-title">BOLZANO → BORMIO - BATTESIMO DEL FUOCO</div>
+                <div class="day-title">BOLZANO → DOLOMITI → BOLZANO - BATTESIMO DEL FUOCO</div>
                 <div class="day-distance">280KM</div>
             </div>
             <div class="day-content">
@@ -155,10 +155,11 @@
                     </div>
 
                     <div class="highlight-box achievement">
-                        <h4>🎯 ARRIVO A BORMIO - CAPITALE DELL'ADDRENALINA</h4>
-                        <p>Hai superato il battesimo. Stasera pizzoccheri, birra e la consapevolezza che domani affronterai il RE.</p>
+                        <h4>🎯 RITORNO A BOLZANO - PRIMO ATTO COMPLETATO</h4>
+                        <p>Hai superato il battesimo dolomitico. Stasera birra altoatesina e la consapevolezza che domani ti aspetta il Timmelsjoch.</p>
                     </div>
                 </div>
+                
                 <!-- MAPPA GIORNO 2 -->
                 <div class="map-section" style="margin-top: 2rem;">
                     <h4 style="color: #ff4500; margin-bottom: 1rem;">🗺️ MAPPA INTERATTIVA</h4>
@@ -215,13 +216,13 @@
             </div>
         </div>
 
-        <!-- Continua con gli altri giorni nello stesso stile epico... -->
+       
 <!-- GIORNO 3 - IL RE DEI PASSI -->
 <div class="day-card epic-day">
     <div class="day-header king-header">
         <div class="day-badge">G3</div>
         <div class="day-title">ANELLO STELVIO - IL TRONO DEL VERO MOTOCICLISTA</div>
-        <div class="day-distance">220KM</div>
+        <div class="day-distance">390KM</div>
     </div>
     <div class="day-content">
         <div class="ride-description">
@@ -266,8 +267,9 @@
                 <span class="info-value">~3.500m (il Re è esigente)</span>
             </div>
             <div class="info-item">
+            <div class="info-item">
                 <span class="info-label">⏱️ Tempo guida:</span>
-                <span class="info-value">5-6 ore (di pura epica)</span>
+                <span class="info-value">7-8 ore (maratona epica)</span>
             </div>
             <div class="info-item">
                 <span class="info-label">🍝 Rifornimento:</span>
@@ -275,7 +277,7 @@
             </div>
             <div class="info-item">
                 <span class="info-label">⚡ Consiglio degli Dei:</span>
-                <span class="info-value">Partenza alle 6:00 o affoghi nel traffico</span>
+                <span class="info-value">Partenza alle 9:00 o affoghi nel traffico</span>
             </div>
         </div>
     </div>
