--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <div class="hero-content">
             <div class="title-container">
                 <h1 class="main-title">A Barbaraüs</h1>
-                <div class="subtitle">Bentornato fratello. Questo giro è tuo.</div>
             </div>
             
             <!-- Dedica Completa -->
@@ -40,7 +39,8 @@
                 </p>
                 
                 <h3 style="color: #ffd700; font-size: 2rem; text-align: center; margin-top: 2rem;">
-                    Bentornato fratello. Questo giro è tuo.
+                    Bentornato fratello. 
+                    Questo giro è tuo.
                 </h3>
             </div>
 
