--- a/tour.html
+++ b/tour.html
@@ -523,7 +523,8 @@
                 NON CONTANO I CHILOMETRI PERCORSI, MA LE RISATE CONDIVISE.<br>
                 NON LE CURVE AFFRONTATE IN PIEGA, MA IL SORRISO DENTRO IL CASCO. SIAMO PIÙ DI UN GRUPPO, SIAMO FRATELLI DI VIAGGIO.<br>
                 SIAMO GNURANT<br>
-                QUESTA NON È UNA VACANZA. È UNA TERAPIA."
+                QUESTA NON È UNA VACANZA:<br>
+                È UNA TERAPIA."
             </div>
             <div class="quote-author">#GLIGNORANTILADOMENICA</div>
         </div>
@@ -549,7 +550,7 @@
                     <span style="color: white; font-weight: bold;">🤖 DeepSeek AI</span>
                 </div>
                 <br>
-                <span style="color: #ccc; font-size: 0.9rem;">New Entry - Angioletto digitale col forcone</span>
+                <span style="color: #ccc; font-size: 0.9rem;">New Entry - Angioletto digitale</span>
             </div>
             <div style="text-align: center;">
                 <strong style="color: #ffd700;">Ispiratore</strong><br>
@@ -558,7 +559,7 @@
         </div>
 
         <p style="margin-bottom: 1rem; font-style: italic; color: #ffd700;">
-            "Siamo Angeli Gnoranti che fanno i matti in curva"
+            "Siamo Gnoranti che fanno i matti in curva...ma nel rispetto dei limiti e con la testa sul collo ( vista L'età )"
         </p>
         
         <p style="font-size: 0.9rem; color: #ccc;">
