--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <style>
         .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), url('assets/images/motorbg.jpg');
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9));
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -41,8 +41,12 @@
     <div class="hero-section">
         <div class="hero-content">
             <div class="title-container">
-                <h1 class="main-title">A Barbaraüs</h1>
-                <div class="subtitle">Bentornato fratello. Questo giro è tuo.</div>
+                <h1 class="main-title" style="font-size: 4rem; color: #ffd700; text-shadow: 3px 3px 0px #ff0000; margin-bottom: 1rem;">
+                    A BARBARAÜS
+                </h1>
+                <div class="subtitle" style="font-size: 1.8rem; color: #ff4500;">
+                    Bentornato fratello. Questo giro è tuo.
+                </div>
             </div>
             
             <!-- Dedica Completa -->
