--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <div class="hero-section">
         <div class="hero-content">
             <div class="title-container">
-                <h1 class="main-title" style="font-size: 4rem; color: #ffd700; text-shadow: 3px 3px 0px #ff0000; margin-bottom: 1rem;">
-                    A BARBARAÜS
-                </h1>
-                <div class="subtitle" style="font-size: 1.8rem; color: #ff4500;">
-                    Bentornato fratello. Questo giro è tuo.
+              <h1 style="font-size: 4rem !important; color: #ffd700 !important; text-shadow: 3px 3px 0px #ff0000 !important; margin-bottom: 1rem !important; font-weight: bold !important; font-family: Arial, sans-serif !important;">
+                   A BARBARAÜS
+               </h1>
+                <div style="font-size: 1.8rem !important; color: #ff4500 !important; font-style: italic !important; margin-bottom: 2rem !important;">
+                  Bentornato fratello. Questo giro è tuo.
                 </div>
             </div>
             
