--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             max-width: 800px;
             margin: 0 auto;
             text-align: left;
+            color: #ffffff; /* TESTO BIANCO */
         }
 
         .dedica-intima {
@@ -72,12 +73,13 @@
             margin-bottom: 40px;
             padding-bottom: 25px;
             border-bottom: 2px solid #ff6b35;
+            color: #ffffff; /* TESTO BIANCO */
         }
 
         .dedica-intima h2 {
             font-size: 2.5em;
             margin: 0;
-            color: #ff6b35;
+            color: #ffffff; /* CAMBIATO DA #ff6b35 A BIANCO */
             font-weight: normal;
             line-height: 1.3;
         }
@@ -86,10 +88,12 @@
             line-height: 1.7;
             font-size: 1.2em;
             text-align: justify;
+            color: #ffffff; /* TESTO BIANCO */
         }
 
         .testo-dedica p {
             margin-bottom: 25px;
+            color: #ffffff; /* TESTO BIANCO */
         }
 
         .motivo-icon {
