--- a/tour.html
+++ b/tour.html
@@ -15,7 +15,7 @@
             <div class="title-container">
                 <h1 class="main-title">🏍️ TOUR DEI GIGANTI 🏔️</h1>
                 <div class="subtitle">5 GIORNI DI PURA ARIA DOLOMITICA</div>
-                <div class="edition-badge">EDIZIONE #GLIGNORANTILADOMENICA</div>
+                <div class="edition-badge">EDIZIONE STRAORDINARIA #GLIGNORANTILADOMENICA</div>
             </div>
             <div class="stats-flash">
                 <div class="stat-item">🔥 15+ PASSI LEGGENDARI</div>
