--- a/tour.html
+++ b/tour.html
@@ -33,7 +33,7 @@
         <div class="epic-quote">
             <div class="quote-text">
                 "LA DOMENICA MOLTI VANNO IN CHIESA, NOI ANDIAMO A FARE PIEGHE."<br>
-                "IL NOSTRO ROSARIO ..IL NASTRO D'ASFALTO."<br>
+                "IL NOSTRO ROSARIO E' IL NASTRO D'ASFALTO."<br>
                 Ma ricordati sempre : <br>
                 Se sei incerto Tieni aperto...non frenare, spalanca e vai...
             </div>
