--- a/tour.html
+++ b/tour.html
@@ -64,8 +64,8 @@
         <div class="day-card epic-day">
             <div class="day-header transfer-header">
                 <div class="day-badge">G1</div>
-                <div class="day-title">TORINO → BOLZANO - IL RISVEGLIO DELLA BESTIA</div>
-                <div class="day-distance">320KM</div>
+                <div class="day-title">TORINO → BOLZANO - IL RISVEGLIO DELL'ANIMA</div>
+                <div class="day-distance">401 KM</div>
             </div>
             <div class="day-content">
                 <div class="ride-description">
@@ -74,7 +74,7 @@
                     <div class="passo-card epic">
                         <div class="passo-icon">🛣️</div>
                         <div class="passo-content">
-                            <h3>AUTOSTRADA DELLA FOLLIA</h3>
+                            <h3>AUTOSTRADA DELLA NOIA</h3>
                             <span class="difficulty easy">RISCALDAMENTO</span>
                             <p>Kilometri che separano la noia dall'adrenalina. Ultima occasione per controllare gli specchietti.</p>
                         </div>
@@ -89,7 +89,7 @@
                     <h4>📋 LA REALTA' DEI FATTI</h4>
                     <div class="info-item">
                         <span class="info-label">⏱️ Tempo di guida:</span>
-                        <span class="info-value">4-5 ore (se non ti perdi)</span>
+                        <span class="info-value">4-5 ore (se non ti perdi..)</span>
                     </div>
                     <div class="info-item">
                         <span class="info-label">💰 Pedaggi:</span>
@@ -100,7 +100,7 @@
                         <span class="info-value">Autogrill o morte</span>
                     </div>
                     <div class="info-item">
-                        <span class="info-label">🏨 Covo:</span>
+                        <span class="info-label">🏨 Il Covo:</span>
                         <span class="info-value">Bolzano base operativa</span>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
             <div class="day-header adrenaline-header">
                 <div class="day-badge">G2</div>
                 <div class="day-title">BOLZANO → DOLOMITI → BOLZANO - BATTESIMO DEL FUOCO</div>
-                <div class="day-distance">280KM</div>
+                <div class="day-distance">280 KM</div>
             </div>
             <div class="day-content">
                 <div class="ride-description">
