--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
     .dedica-container {
       position: relative;
-      z-index: 2;
+      z-index: 1;
       max-width: 700px;
-      width: 80%;
+      width: 75%;
       background: rgba(0, 0, 0, 0.9);
-      padding: 40px 30px;
-      border-radius: 10px;
-      border: 3px solid #ff6b35;
+      padding: 35px 30px;
+      border-radius: 15px;
+      border: 2px solid #ff6b35;
       box-shadow: 0 10px 30px rgba(255, 0, 0, 0.3);
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       /* RIDOTTO SPAZIO PER IL BOTTONE PIÙ PICCOLO */
     }
 
@@ -51,7 +51,7 @@
       margin-bottom: 1rem;
       font-weight: bold;
       font-family: Arial, sans-serif;
-      line-height: 1.2;
+      line-height: 1;
       word-wrap: break-word;
     }
 
@@ -59,7 +59,7 @@
       font-size: clamp(1.2rem, 4vw, 1.8rem);
       color: #ff4500;
       font-style: italic;
-      margin-bottom: 2rem;
+      margin-bottom: 3rem;
       line-height: 1.4;
     }
 
@@ -103,7 +103,7 @@
       font-style: italic;
       color: #ffd700;
       font-size: 1.2em;
-      padding-top: 15px;
+      padding-top: 10px;
       border-top: 1px solid #ff6b35;
     }
 
@@ -257,7 +257,7 @@
 
         <!-- Firma -->
         <div class="firma-dedica">
-          I tuoi fratelli di strada
+          I tuoi fratelli Gnoranti
         </div>
       </div>
     </div>
