--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div class="dedica-container">
       <!-- Titolo principale -->
       <h1 class="dedica-title">A BARBARAÜS</h1>
-      <div class="dedica-subtitle">Bentornato fratello. Questo giro è tuo.</div>
+      <div class="dedica-subtitle">Bentornato fratello. Questo Tour è per te.</div>
 
       <div class="contenuto-testo">
         <!-- Testo della dedica -->
