--- a/tour.html
+++ b/tour.html
@@ -19,8 +19,8 @@
             </div>
             <div class="stats-flash">
                 <div class="stat-item">🔥 15+ PASSI LEGGENDARI</div>
-                <div class="stat-item">💀 1.420KM DI ADRENALINA</div>
-                <div class="stat-item">⚡ 3 PAESI, 1 OBBIETTIVO: CURVARE</div>
+                <div class="stat-item">💀 1.420KM DI EMOZIONI</div>
+                <div class="stat-item">⚡ 3 PAESI, 1 OBBIETTIVO: CURVARE E RIDERE</div>
             </div>
         </div>
         <div class="scroll-indicator">
