--- a/tour.html
+++ b/tour.html
@@ -19,8 +19,8 @@
             </div>
             <div class="stats-flash">
                 <div class="stat-item">🔥 15+ PASSI LEGGENDARI</div>
-                <div class="stat-item">💀 1.420KM DI EMOZIONI</div>
-                <div class="stat-item">⚡ 3 PAESI, 1 OBBIETTIVO: CURVARE E RIDERE</div>
+                <div class="stat-item">💀 1.420KM DI ADRENALINA</div>
+                <div class="stat-item">⚡ 3 PAESI, 1 OBBIETTIVO: CURVARE</div>
             </div>
         </div>
         <div class="scroll-indicator">
@@ -383,13 +383,13 @@
                         <p>Mendola, Gavia, Stelvio e Umbrail! Stasera pizzoccheri, birra e la consapevolezza di aver conquistato quattro leggende in un giorno solo.</p>
                     </div>
 
-                    <!-- MAPPA GIORNO 4 - CORRETTA CON IFRAME -->
+                    <!-- MAPPA GIORNO 4 - URL CORRETTO -->
                     <div class="map-section" style="margin-top: 2rem;">
                         <h4 style="color: #ff4500; margin-bottom: 1rem;">🗺️ MAPPA INTERATTIVA</h4>
                         
                         <div class="map-container" style="margin-bottom: 1rem;">
                             <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m36!1m12!1m3!1d43810.95474911229!2d11.576261227462352!3d46.43448639712538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m21!3e0!4m5!1s0x47829e2d0e9b38b1%3A0x7b7dbf6e3a1b5b8f!2sBolzano!3m2!1d46.4982953!2d11.3547582!4m5!1s0x478c62c7b1b5b8f%3A0x7b7dbf6e3a1b5b8f!2sPasso%20Gavia!3m2!1d46.341667!2d10.5!4m5!1s0x478c62c7b1b5b8f%3A0x7b7dbf6e3a1b5b8f!2sPasso%20dello%20Stelvio!3m2!1d46.5286!2d10.4531!4m5!1s0x478c62c7b1b5b8f%3A0x7b7dbf6e3a1b5b8f!2sBormio!3m2!1d46.468!2d10.372!5e0!3m2!1sit!2sit!4v1690000000000!5m2!1sit!2sit" 
+                                src="https://www.google.com/maps/embed?pb=!1m36!1m12!1m3!1d43810.95474911229!2d11.576261227462352!3d46.43448639712538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m21!3e0!4m5!1s0x47829e2d0e9b38b1%3A0x7b7dbf6e3a1b5b8f!2sBolzano!3m2!1d46.4982953!2d11.3547582!4m5!1s0x478c62c7b1b5b8f%3A0x7b7dbf6e3a1b5b8f!2sPasso%20Gavia!3m2!1d46.341667!2d10.5!4m5!1s0x478c62c7b1b5b8f%3A0x7b7dbf6e3a1b5b8f!2sPasso%20dello%20Stelvio!3m2!1d46.5286!2d10.4531!4m5!1s0x478c62c7b1b5b8f%3A0x7b7dbf6e3a1b5b8f!2sBormio!3m2!1d46.468!2d10.372!5e0!3m2!1sit!2sit" 
                                 width="100%" 
                                 height="300" 
                                 style="border: 2px solid #ff0000; border-radius: 8px;" 
