--- a/tour.html
+++ b/tour.html
@@ -116,7 +116,7 @@
                             <p><strong>📏 Distanza:</strong> ~350 km | <strong>⏱️ Tempo:</strong> 4-5 ore</p>
                         </div>
                     </div>
-
+                 </div>
                 
                 <div class="day-info">
                     <h4>📋 LA REALTA' DEI FATTI</h4>
