--- a/tour.html
+++ b/tour.html
@@ -613,11 +613,16 @@
         <!-- Manifesto Finale -->
         <div class="epic-quote">
             <div class="quote-text">
-                <h2>MANIFESTO #GLIGNORANTILADOMENICA</h2>
-                "NON CI RICORDEREMO DEI CHILOMETRI, MA DELLE LACRIME DI GIOIA DOPO OGNI TORNANTE.<br>
+                <h2>MANIFESTO<br> 
+                    #GLIGNORANTI<br> 
+                    LA<br> 
+                    DOMENICA</h2>
+                "NON CI RICORDEREMO DEI CHILOMETRI, MA DELLE LACRIME DI GIOIA DOPO OGNI TORNANTE E<br>
                 DELLE RISATE CON GLI AMICI.<br>
-                NON CONTANO I CHILOMETRI PERCORSI, MA LE RISATE CONDIVISE.<br>
-                NON LE CURVE AFFRONTATE IN PIEGA, MA IL SORRISO DENTRO IL CASCO. SIAMO PIÙ DI UN GRUPPO, SIAMO FRATELLI DI VIAGGIO.<br>
+                NON CONTANO I CHILOMETRI PERCORSI.<br>
+                NON LE CURVE AFFRONTATE IN PIEGA, MA IL SORRISO DENTRO IL CASCO.<br>
+                SIAMO PIÙ DI UN GRUPPO, <br>
+                SIAMO FRATELLI DI VIAGGIO.<br>
                 SIAMO GNURANT<br>
                 QUESTA NON È UNA VACANZA:<br>
                 È UNA TERAPIA."
