--- a/tour.html
+++ b/tour.html
@@ -21,7 +21,7 @@
             <div class="stats-flash">
                 <div class="stat-item">🔥 15+ PASSI LEGGENDARI</div>
                 <div class="stat-item">💀 1.420KM DI ADRENALINA</div>
-                <div class="stat-item">⚡ 3 PAESI, 1 OBBIETTIVO: CURVARE</div>
+                <div class="stat-item">⚡ 3 PAESI, 1 OBIETTIVO: CURVARE</div>
             </div>
         </div>
         <div class="scroll-indicator">
