--- a/tour.html
+++ b/tour.html
@@ -106,7 +106,7 @@
                     
                         <div class="gpx-info">
                         <p style="font-size: 1.2em;"><strong>📥 File GPX disponibile:</strong> <a href="downloads/gpx/giorno1.gpx" download style="color: #ffd700; font-size: 1.1em;">giorno1.gpx</a></p>
-                        <p style="font-size: 1.2em;"><strong>📥 File PDF disponibile:</strong> <a href="downloads/pdf/giorno1.pdf" download style="color: #ffd700; font-size: 1.1em;">giorno1.pdf</a></p>
+                        <p style="font-size: 1.2em;"><strong>📥 File PDF disponibile:</strong> <a href="downloads/pdf/GIORNO1.pdf" download style="color: #ffd700; font-size: 1.1em;">giorno1.pdf</a></p>
                         <p style="font-size: 1.2em;"><strong>🛣️ Percorso:</strong> Torino → Milano → Brescia → Bolzano</p>
                         <p style="font-size: 1.2em;"><strong>📏 Distanza:</strong> ~350 km | <strong>⏱️ Tempo:</strong> 4-5 ore</p>
                         </div>
