--- a/tour.html
+++ b/tour.html
@@ -583,11 +583,9 @@
                     Clicca sull'immagine per ingrandirla
                 </div>
 
-                <div class="tappa-links">
-                    <div class="nav-options">
-                        <a href="assets/downloads/gpx/giganti-completo.gpx" download class="map-link maps-link">📥 Scarica GPX Completo</a>
-                        <a href="assets/images/TOUR_COMPLETO.jpg" download class="map-link waze-link">📷 Scarica Mappa</a>
-                    </div>
+                <div class="gpx-info">
+                    <p style="font-size: 1.2em;"><strong>📥 File GPX disponibile:</strong> <a href="downloads/gpx/giganti-completo.gpx" download style="color: #ffd700; font-size: 1.1em;">giganti-completo.gpx</a></p>
+                    <p style="font-size: 1.2em;"><strong>📥 File PDF disponibile:</strong> <a href="downloads/pdf/GIRO_COMPLETO.pdf" download style="color: #ffd700; font-size: 1.1em;">giganti-completo.pdf</a></p>
                 </div>
             </div>
         </div>
