--- a/tour.html
+++ b/tour.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Header Epico -->
     <div class="hero-section">
-        <div class="hero-overlay"></div>
+          <!-- <div class="hero-overlay"></div> --> <!-- RIMUOVI questa riga -->
         <div class="hero-content">
             <div class="title-container">
                 <h1 class="main-title">🏍️ TOUR DEI GIGANTI 🏔️</h1>
