--- a/tour.html
+++ b/tour.html
@@ -17,7 +17,7 @@
                 <h1 class="main-title">🏍️ TOUR DEI GIGANTI 🏔️</h1>
                 <div class="subtitle">5 GIORNI DI PURA ARIA DOLOMITICA</div>
                 <div class="edition-badge">EDIZIONE 2025 #GLIGNORANTILADOMENICA</div>
-                <div class="edition-badge">Dal : 01/07/25  Al : 05/07/25 </div>
+                <div class="date-badge">Dal: 01/07/25 - Al: 05/07/25</div>
             </div>
             <div class="stats-flash">
                 <div class="stat-item">🔥 15+ PASSI LEGGENDARI</div>
