--- a/tour.html
+++ b/tour.html
@@ -9,26 +9,33 @@
 </head>
     
 <body>
-    <!-- Header Epico -->
-    <div class="hero-section">
-          <!-- <div class="hero-overlay"></div> --> <!-- RIMUOVI questa riga -->
-        <div class="hero-content">
-            <div class="title-container">
-                <h1 class="main-title">🏍️ TOUR DEI GIGANTI 🏔️</h1>
-                <div class="subtitle">5 GIORNI DI PURA ARIA DOLOMITICA</div>
-                <div class="edition-badge">EDIZIONE 2025 #GLIGNORANTILADOMENICA</div>
-                <div class="date-badge">Dal: 01/07/25 - Al: 05/07/25</div>
+  <!-- Header Epico -->
+            <div class="hero-section">
+                <div class="hero-content">
+                    <div class="title-container">
+                        <h1 class="main-title">
+                            <span class="title-word">TOUR</span>
+                            <span class="title-line">
+                                <span class="title-emoji">🏍️</span>
+                                <span class="title-word">DEI</span>
+                                <span class="title-emoji">🏔️</span>
+                            </span>
+                            <span class="title-word">GIGANTI</span>
+                        </h1>
+                        <div class="subtitle">5 GIORNI DI PURA ARIA DOLOMITICA</div>
+                        <div class="edition-badge">EDIZIONE 2025 #GLIGNORANTILADOMENICA</div>
+                        <div class="date-badge">Dal: 01/07/25 - Al: 05/07/25</div>
+                    </div>
+                    <div class="stats-flash">
+                        <div class="stat-item">🔥 15+ PASSI LEGGENDARI</div>
+                        <div class="stat-item">💀 1.420KM DI ADRENALINA</div>
+                        <div class="stat-item">⚡ 3 PAESI, 1 OBIETTIVO: CURVARE E RIDERE</div>
+                    </div>
+                </div>
+                <div class="scroll-indicator">
+                    <span>↓ SCOPRI I 5 GIORNI EPICI ↓</span>
+                </div>
             </div>
-            <div class="stats-flash">
-                <div class="stat-item">🔥 15+ PASSI LEGGENDARI</div>
-                <div class="stat-item">💀 1.420KM DI ADRENALINA</div>
-                <div class="stat-item">⚡ 3 PAESI, 1 OBIETTIVO: CURVARE E RIDERE</div>
-            </div>
-        </div>
-        <div class="scroll-indicator">
-            <span>↓ SCOPRI I 5 GIORNI EPICI ↓</span>
-        </div>
-    </div>
 
     <div class="container">
         <!-- Quote Iconica -->
