--- a/tour.html
+++ b/tour.html
@@ -14,13 +14,13 @@
                 <div class="hero-content">
                     <div class="title-container">
                         <h1 class="main-title">
-                            <span class="title-word">TOUR</span>
+                            <span class="title-line">TOUR</span>
                             <span class="title-line">
                                 <span class="title-emoji">🏍️</span>
-                                <span class="title-word">DEI</span>
+                                DEI
                                 <span class="title-emoji">🏔️</span>
                             </span>
-                            <span class="title-word">GIGANTI</span>
+                            <span class="title-line">GIGANTI</span>
                         </h1>
                         <div class="subtitle">5 GIORNI DI PURA ARIA DOLOMITICA</div>
                         <div class="edition-badge">EDIZIONE 2025 #GLIGNORANTILADOMENICA</div>
