--- a/tour.html
+++ b/tour.html
@@ -364,7 +364,7 @@
                     <div class="passo-card epic">
                         <div class="passo-icon">🌲</div>
                         <div class="passo-content">
-                            <h3>PASSO MENODLA (1.363m)</h3>
+                            <h3>PASSO MENDOLA (1.363m)</h3>
                             <span class="difficulty easy">RISCALDAMENTO</span>
                             <p>Bolzano → Passo Mendola: il risveglio muscolare tra i boschi dell'Alto Adige.</p>
                         </div>
