--- a/tour.html
+++ b/tour.html
@@ -174,7 +174,7 @@
                         <div class="passo-icon">🏔️</div>
                         <div class="passo-content">
                             <h3>PASSO PORDOI (2.239m)</h3>
-                            <span class="difficulty medium">ADDRENALINA MEDIA</span>
+                            <span class="difficulty medium">ADRENALINA MEDIA</span>
                             <p>33 curve verso il cielo. La terrazza delle Dolomiti dove capisci perché vivi.</p>
                         </div>
                     </div>
@@ -637,12 +637,12 @@
                     DOMENICA</h2>
                 "NON CI RICORDEREMO DEI CHILOMETRI, MA DELLE LACRIME DI GIOIA DOPO OGNI TORNANTE E<br>
                 DELLE RISATE CON GLI AMICI.<br>
-                NON CONTANO I CHILOMETRI PERCORSI.<br>
-                NON LE CURVE AFFRONTATE IN PIEGA, MA IL SORRISO DENTRO IL CASCO.<br>
+                NON CONTANO I CHILOMETRI PERCORSI, MA LE CURVE AFFRONTATE<br>
+                IN PIEGA CON IL SORRISO DENTRO IL CASCO.<br>
                 SIAMO PIÙ DI UN GRUPPO, <br>
                 SIAMO FRATELLI DI VIAGGIO.<br>
-                SIAMO GNURANT<br>
-                QUESTA NON È UNA VACANZA:<br>
+                SIAMO "GLI GNURANT"<br>
+                QUESTA NON È UNA VACANZA:<br><br>
                 È UNA TERAPIA."
             </div>
             <div class="quote-author">#GLIGNORANTILADOMENICA</div>
