--- a/index.html
+++ b/index.html
@@ -94,12 +94,17 @@
     .motivo-icon {
       text-align: center;
       margin: 30px 0;
+      position: relative;
     }
 
     .motivo-icon img {
-      width: 150px;
+      width: 100%;
+      max-width: 400px;
       height: auto;
-      filter: drop-shadow(0 0 10px rgba(255, 107, 53, 0.5));
+      filter: drop-shadow(0 0 25px rgba(255, 107, 53, 0.9)) 
+              drop-shadow(0 0 50px rgba(255, 0, 0, 0.6))
+              drop-shadow(0 0 75px rgba(139, 0, 0, 0.4));
+      opacity: 0.85;
     }
 
     .firma-dedica {
@@ -209,7 +214,8 @@
       }
 
       .motivo-icon img {
-        width: 120px;
+        width: 100%;
+        max-width: 300px;
       }
     }
 
@@ -220,7 +226,8 @@
       }
 
       .motivo-icon img {
-        width: 100px;
+        width: 100%;
+        max-width: 250px;
       }
     }
   </style>
