--- a/index.html
+++ b/index.html
@@ -43,8 +43,23 @@
       margin-bottom: 10px;
     }
 
+    .logo-header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .logo-header img {
+      width: 100%;
+      max-width: 400px;
+      height: auto;
+      filter: drop-shadow(0 0 25px rgba(255, 107, 53, 0.9)) 
+              drop-shadow(0 0 50px rgba(255, 0, 0, 0.6))
+              drop-shadow(0 0 75px rgba(139, 0, 0, 0.4));
+      opacity: 0.85;
+    }
+
     .dedica-title {
-      font-size: clamp(2rem, 8vw, 4rem);
+      font-size: clamp(2rem, 6vw, 3rem);
       color: #ffd700;
       text-shadow: 3px 3px 0px #ff0000;
       margin-bottom: 1rem;
@@ -95,6 +110,7 @@
       text-align: center;
       margin: 30px 0;
       position: relative;
+      display: none;
     }
 
     .motivo-icon img {
@@ -213,8 +229,7 @@
         font-size: 0.85em;
       }
 
-      .motivo-icon img {
-        width: 100%;
+      .logo-header img {
         max-width: 300px;
       }
     }
@@ -225,9 +240,12 @@
         padding: 8px 6px;
       }
 
-      .motivo-icon img {
-        width: 100%;
+      .logo-header img {
         max-width: 250px;
+      }
+
+      .dedica-title {
+        font-size: clamp(1.8rem, 8vw, 2.5rem);
       }
     }
   </style>
