--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
               drop-shadow(0 0 75px rgba(139, 0, 0, 0.4));
       opacity: 0.85;
     }
-
-    .dedica-title {
       font-size: clamp(2rem, 6vw, 3rem);
       color: #ffd700;
       text-shadow: 3px 3px 0px #ff0000;
@@ -206,6 +204,15 @@
       }
 
       .dedica-title {
+      font-size: clamp(2rem, 6vw, 3rem);
+      color: #ffd700;
+      text-shadow: 3px 3px 0px #ff0000;
+      margin-bottom: 1rem;
+      font-weight: bold;
+      font-family: 'Georgia', 'Times New Roman', serif;
+      line-height: 1;
+      word-wrap: break-word;
+    }
         font-size: clamp(2rem, 10vw, 3rem);
         text-shadow: 2px 2px 0px #ff0000;
       }
