--- a/index.html
+++ b/index.html
@@ -43,21 +43,8 @@
       margin-bottom: 10px;
     }
 
-    .logo-header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    .logo-header img {
-      width: 100%;
-      max-width: 400px;
-      height: auto;
-      filter: drop-shadow(0 0 25px rgba(255, 107, 53, 0.9)) 
-              drop-shadow(0 0 50px rgba(255, 0, 0, 0.6))
-              drop-shadow(0 0 75px rgba(139, 0, 0, 0.4));
-      opacity: 0.85;
-    }
-      font-size: clamp(2rem, 6vw, 3rem);
+    .dedica-title {
+      font-size: clamp(2.5rem, 8vw, 4rem);
       color: #ffd700;
       text-shadow: 3px 3px 0px #ff0000;
       margin-bottom: 1rem;
@@ -108,7 +95,6 @@
       text-align: center;
       margin: 30px 0;
       position: relative;
-      display: none;
     }
 
     .motivo-icon img {
@@ -204,15 +190,6 @@
       }
 
       .dedica-title {
-      font-size: clamp(2rem, 6vw, 3rem);
-      color: #ffd700;
-      text-shadow: 3px 3px 0px #ff0000;
-      margin-bottom: 1rem;
-      font-weight: bold;
-      font-family: 'Georgia', 'Times New Roman', serif;
-      line-height: 1;
-      word-wrap: break-word;
-    }
         font-size: clamp(2rem, 10vw, 3rem);
         text-shadow: 2px 2px 0px #ff0000;
       }
@@ -236,7 +213,8 @@
         font-size: 0.85em;
       }
 
-      .logo-header img {
+      .motivo-icon img {
+        width: 100%;
         max-width: 300px;
       }
     }
@@ -247,12 +225,9 @@
         padding: 8px 6px;
       }
 
-      .logo-header img {
+      .motivo-icon img {
+        width: 100%;
         max-width: 250px;
-      }
-
-      .dedica-title {
-        font-size: clamp(1.8rem, 8vw, 2.5rem);
       }
     }
   </style>
