--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
       border: 2px solid #333333;
     }
   </style>
+
+     
+    <!-- CSS solo per la stampa -->
+    <link rel="stylesheet" href="assets/css/print.css" media="print">
+  
 </head>
 
 <body>
