--- a/stampa.html
+++ b/stampa.html
@@ -855,6 +855,16 @@
             <div class="quote-text">
                 "IL NOSTRO ROSARIO E' IL NASTRO D'ASFALTO."
             </div>
+              <div class="quote-text">
+               -------------------------------------------------------------
+            </div>
+             <div class="quote-text">
+                Ma ricordati sempre :
+            </div>
+             <div class="quote-text">
+                Se sei incerto Tieni aperto...non frenare, spalanca e vai..
+            </div>
+            
         </div>
 
         <!-- GIORNO 1 -->
