--- a/stampa.html
+++ b/stampa.html
@@ -1190,6 +1190,9 @@
 
         <!-- MANIFESTO FINALE -->
         <div class="epic-quote">
+              <div class="quote-text">
+                "#GLIGNORANTILADOMENICA"
+            </div>
             <div class="quote-text">
                 "NON CI RICORDEREMO DEI CHILOMETRI, MA DELLE LACRIME DI GIOIA DOPO OGNI TORNANTE E DELLE RISATE CON GLI AMICI."
             </div>
@@ -1198,6 +1201,15 @@
             </div>
             <div class="quote-text">
                 "SIAMO PIÙ DI UN GRUPPO, SIAMO FRATELLI DI VIAGGIO. SIAMO GLI GNURANT."
+            </div>
+            <div class="quote-text">
+                --------------------------------------------------------------------------------------------------------------
+            </div>
+            <div class="quote-text">
+                QUESTA NON È UNA VACANZA:
+            </div>
+                   <div class="quote-text">
+                "È UNA TERAPIA."
             </div>
             <div class="quote-text">
                 <strong>#GLIGNORANTILADOMENICA</strong>
